<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/contacts"
        android:checked="true"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/tab1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/conversations"
        android:checked="true"
        android:icon="@drawable/ic_question_answer_black_24dp"
        android:title="@string/tab2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delayed_messages"
        android:checked="true"
        android:icon="@drawable/ic_timer_black_24dp"
        android:title="@string/tab3"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/hold_messages"
        android:checked="true"
        android:icon="@drawable/ic_notifications_paused_black_24dp"
        android:title="@string/tab4"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/settings"
        android:checked="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/tab5"
        app:showAsAction="ifRoom" />

</menu>